cmake_minimum_required(VERSION 3.14)
project("Unit_Test_Personal_Finance_Manager")

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  # Specify the commit you depend on and update it regularly.
  URL https://github.com/google/googletest/archive/refs/heads/main.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Now simply link against gtest or gtest_main as needed. Eg
add_executable(${PROJECT_NAME} UnitTests.cpp)

target_link_libraries(${PROJECT_NAME}
	
	gtest_main
	)
add_test(NAME Unit_Test_Personal_Finance_Manager COMMAND ${PROJECT_NAME})